# porto

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: docker-release.yml
assets/css/: tailwind.css
core/: settings.py  urls.py
project/: admin.py  models.py  tests.py  views.py
project/management/commands/: seed_data.py
project/migrations/: 0001_initial.py
templates/: projects.html
templates/components/: footer.html  navbar.html
templates/layouts/: base.html
templates/pages/: home.html  project_detail.html  projects.html
